fix css border box flicker

--- a/packages/toolbars-new/web/src/Toolbar/ToolbarInputButton.scss
+++ b/packages/toolbars-new/web/src/Toolbar/ToolbarInputButton.scss
@@ -4,7 +4,7 @@
 
 .toolbarButton_wrapper {
   display: flex;
-
+  border: 1px solid rgba($fallbackColorTuple, 0);
   &.toolbarButton_wrapper_mobile:not(.toolbarButton_active) {
     &:hover {
       .toolbarButton {
